# ssm-admin

./: CHANGELOG.md  README.md  pyproject.toml
src/ssm_admin/: ssm_admin.py
tests/: test_ssm_admin.py
