[tool.poetry]
name = "ssm-admin"
version = "0.1.0"
description = ""
authors = ["HarshavardhanGowda <harsha7697@gmail.com>"]
readme = "README.md"
# packages = [{include = "ssm_admin"}]

[tool.poetry.dependencies]
python = "^3.7"
typer = {extras = ["all"], version = "^0.9.0"}
rich = "^13.5.2"
botocore = "^1.31.37"
structlog = "^23.1.0"

[tool.poetry.scripts]
ssm-admin = 'ssm_admin.ssm_admin:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
